<resources>
    <string name="app_name">Simple Blog</string>
    <string name="add_post">Add post</string>
    <string name="settings">Settings</string>
    <string name="submit_post">Submit post</string>
    <string name="post_description">Post Description ...</string>
    <string name="post_title">Post Title ...</string>
    <string name="post_image">Post Image</string>
    <string name="post_title_goes_here">Post Title Goes here</string>
    <string name="post_description_goes_here">Post Description Goes here</string>
    <string name="your_name">Your name ...</string>
    <string name="email">Email ...</string>
    <string name="password">Password ...</string>
    <string name="sing_up">Sing Up</string>
    <string name="logout">Log out</string>
    <string name="login">Login</string>
    <string name="need_a_new_account">Need a new Account</string>
    <string name="username">username</string>
    <string name="remove_post">Remove post</string>
</resources>
