<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/postImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/add_btn" />

        <TextView
            android:id="@+id/postTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/post_title_goes_here"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/postDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:text="@string/post_description_goes_here"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/postUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:text="@string/username"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_margin="15dp"
                android:id="@+id/likeBtn"
                android:src="@drawable/ic_like" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>